# rob-and-emilys-distinguished-adventure

./: .gitignore  BUILD.bazel  Gopkg.toml  README.md  WORKSPACE  bazel-bin  bazel-genfiles  bazel-out  bazel-rob-and-emilys-distinguished-adventure  bazel-testlogs
cargo/: BUILD  Cargo.toml  crates.bzl
cargo/remote/: andrew-0.2.0.BUILD  android_glue-0.2.3.BUILD  approx-0.3.1.BUILD  backtrace-0.3.14.BUILD  backtrace-sys-0.1.28.BUILD  block-0.1.6.BUILD  cc-1.0.31.BUILD  cocoa-0.18.4.BUILD  conrod_core-0.63.0.BUILD  conrod_derive-0.63.0.BUILD  conrod_winit-0.63.0.BUILD  core-foundation-0.6.3.BUILD  core-graphics-0.17.3.BUILD  crossbeam-0.2.12.BUILD  crossbeam-0.6.0.BUILD  crossbeam-channel-0.3.8.BUILD  crossbeam-deque-0.6.3.BUILD  crossbeam-deque-0.7.1.BUILD  crossbeam-epoch-0.3.1.BUILD  crossbeam-epoch-0.7.1.BUILD  crossbeam-utils-0.2.2.BUILD  crossbeam-utils-0.6.5.BUILD  daggy-0.5.0.BUILD  dlib-0.4.1.BUILD  downcast-rs-1.0.3.BUILD  either-1.5.1.BUILD  erased-serde-0.3.9.BUILD  fixedbitset-0.1.9.BUILD  itertools-0.8.0.BUILD  legion-0.1.1.BUILD  libc-0.2.50.BUILD  libloading-0.5.0.BUILD  line_drawing-0.7.0.BUILD  log-0.4.6.BUILD  malloc_buf-0.0.6.BUILD  memmap-0.7.0.BUILD  names-0.11.0.BUILD  nix-0.12.0.BUILD  nix-0.13.0.BUILD  num-0.2.0.BUILD  (+43 more)
cmd/game/: BUILD.bazel  main.go
pkg/api/v1/: collision_groups.go
pkg/components/: health.go  player_state.go  weapon_state.go
pkg/entities/: door.go  generic_obstacle.go  hud.go  player.go
pkg/entities/player/: player.go
pkg/systems/: interfaces.go  player_movement.go  player_weapon.go
src/: BUILD.bazel  main.rs
(+4 files in other folders)
