[package]
name = "rob-and-emilys-distinguished-adventure"
version = "0.1.0"
authors = ["Calliope Gardner <calliope@chronojam.co.uk>"]
edition = "2018"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies]
legion = "0.1.1"
conrod_core = "0.63.0"
conrod_winit = "0.63.0"

[raze]
# The WORKSPACE relative path to the Cargo.toml working directory.
workspace_path = "//cargo"
genmode = "Remote"
# The target to generate BUILD rules for.
target = "x86_64-unknown-linux-gnu"

[raze.crates.names.'0.11.0']
gen_buildrs = true

[raze.crates.syn.'0.15.29']
gen_buildrs = true

[raze.crates.proc-macro2.'0.4.27']
additional_flags = [
    "--cfg=use_proc_macro",
]