package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library", "rust_binary")

rust_library(
    name = "rust_default_library",
    srcs = [
        "main.rs",
    ],
)

rust_binary(
    name = "hello_world",
    srcs = [
        "main.rs",
    ],
    deps = [":rust_default_library"],
)